[project]
name = "my-mcp-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.0.2",
    "jupyterlab>=4.4.10",
    "jupyterlab-git>=0.51.2",
    "minsearch>=0.0.7",
    "requests>=2.32.5",
    "toyaikit>=0.0.6",
]
